# uvgd-summer-2025

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs  setup.rs  sim.rs
src/components/: body.rs  ghost.rs  mod.rs  moon.rs  sun.rs
src/systems/: camera.rs  cursor.rs  debug.rs  ghost_follow_camera.rs  gravity.rs  keyboardcontrol.rs  mod.rs  moon_behavior.rs  mousecontrol.rs  mousescroll.rs  spawn.rs  spawn_ghost.rs  spawn_moon.rs  spawn_sun.rs  sun_behavior.rs  zoom.rs
